--- a/src/main/resources/com/svx/github/style/styles.css
+++ b/src/main/resources/com/svx/github/style/styles.css
@@ -54,7 +54,7 @@ Label {
 
 .repository-list-button {
     -fx-padding: 12 6;
-    -fx-background-color: #22282c;
+    -fx-background-color: #24292e;
     -fx-alignment: center-left;
 }
 
